# Gz_Lidar_3D

./: .gitignore  README.md  my_setup.rviz  rviz config.rviz
models/so101_new_calib/: model.config  model.sdf  run.txt  so101.urdf  so101_world.sdf  so101_world_local.sdf
models/so101_new_calib/meshes/: tree.stl
scripts/: run_all.sh
src/so101_bringup/: package.xml  setup.cfg  setup.py
src/so101_bringup/so101_bringup/: so101_sim.launch.py
src/yahboomcar_description/urdf/: yahboomcar_X3.urdf.xacro  yahboomcar_X3plus.gazebo.urdf.xacro  yahboomcar_X3plus.urdf.xacro_bk
src/yahboomcar_description_ros2/: CMakeLists.txt  package.xml
src/yahboomcar_description_ros2/launch/: spawn_gazebo.launch.py
src/yahboomcar_description_ros2/urdf/: yahboomcar_X3plus.urdf
