<?xml version="1.0"?>
<package format="3">
  <name>yahboomcar_description_ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 wrapper for Yahboom car description</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
